--- a/.github/workflows/cicd_deploy.yaml
+++ b/.github/workflows/cicd_deploy.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.0'  # Replace with your Flutter version
+          flutter-version: 'stable-3.7.0-x64  # Replace with your Flutter version
 
       # Install dependencies
       - name: Install dependencies
