--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "homepage": "https://github.com/shabnam777/flutter-test-app",
   "scripts": {
-    "deploy": "page1 -d build/web"
+    "deploy": "gh-pages -d build/web"
   },
   "name": "image-gallery",
   "version": "1.0.0",
   "devDependencies": {
-    "page1": "^3.2.3"
+    "gh-pages": "^3.2.3"
   }
 }
